--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="about_author">Autor:</string> 
-    <string name="about_blizzard">Burza śnieżna</string> 
+    <string name="about_version">Wersja:</string>
+    <string name="about_sunny">Słonecznie</string>
     <string name="about_cloudy">Pochmurnie</string>
-    <string name="about_dust">Pylisto</string>
+    <string name="about_overcast">Overcast</string>
     <string name="about_fog">Mgła</string>
+    <string name="about_rainstorm">Rainstorm</string>
+    <string name="about_t_storms">T-storms</string>
+    <string name="about_rain_drizzle">Drizzle</string>
+    <string name="about_heavy_rain">Heavy Rain</string>
+    <string name="about_moderate_rain">Moderate Rain</string>
+    <string name="about_light_rain">Light Rain</string>
+    <string name="about_sleet">Sleet</string>
+    <string name="about_blizzard">Blizzard</string>
+    <string name="about_snow_showers">Snow Showers</string>
+    <string name="about_heavy_snow">Heavy Snow</string>
+    <string name="about_moderate_snow">Moderate Snow</string>
+    <string name="about_light_snow">Light Snow</string>
+    <string name="about_dust">Dust</string>
+    <string name="about_hailstone">Hailstone</string>
+    <string name="about_haze">Haze</string>
     <string name="about_for_translators">For Translators:</string>
     <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
-    <string name="about_hailstone">Grad</string>
-    <string name="about_heavy_snow">Śnieg</string>
-    <string name="about_light_rain">Lekki deszcz</string>
-    <string name="about_light_snow">Lekki śnieg</string>
-    <string name="about_overcast">Zachmurzenie</string>
-    <string name="about_rainstorm">Ulewy</string> 
-    <string name="about_rain_drizzle">Przelotne deszcze</string>
-    <string name="about_sleet">Deszcz ze śniegiem</string>
     <string name="about_social">Linki społecznościowe:</string>
-    <string name="about_sunny">Bezchmurnie</string>
-    <string name="about_t_storms">Burze</string>
-    <string name="about_version">Wersja:</string>
+    <string name="action_bar_selected_format">Zaznaczone: %d</string>
     <string name="app_name">Pogoda BZ</string>
+    <string name="applying_theme">Ustawianie motywu\u2026</string>
     <string name="btn_add_location">Dodaj lokalizację</string>
+    <string name="btn_apply_theme">Zastosuj motyw</string>
     <string name="btn_delete_location">Usuń lokalizację</string>
     <string name="cancel">Anuluj</string>
     <string name="clear_miui_data">Wyczyść dane pogody MIUI</string>
@@ -61,17 +69,19 @@ Naprawdę to doceniam!"</string>
     <string name="forecast_chance_of_tstorm">Burza</string>
     <string name="forecast_clear">Bezchmurnie</string>
     <string name="forecast_cloudy">Pochmurno</string>
+    <string name="forecast_cold">Mróz</string>
     <string name="forecast_drizzle">Mżawka</string>
     <string name="forecast_dust">Pył</string>
     <string name="forecast_fair">Przejrzyście</string>
     <string name="forecast_flurries">Ulewy</string>
     <string name="forecast_fog">Mgła</string>
     <string name="forecast_freezing_drizzle">Marznąca mżawka</string>
-	<string name="forecast_freezing_rain">Marznący deszcz</string>
+    <string name="forecast_freezing_rain">Marznący deszcz</string>
+    <string name="forecast_haze">Haze</string>
     <string name="forecast_hail">Grad</string>
-    <string name="forecast_haze">Mgłą</string>
+    <string name="forecast_hot">Upał</string>
     <string name="forecast_heavy_rain">Silny deszcz</string>
-    <string name="forecast_icy">gołoledź</string>
+    <string name="forecast_icy">Gołoledź</string>
     <string name="forecast_light_rain">Słaby deszcz</string>
     <string name="forecast_light_snow">Słaby śnieg</string>
     <string name="forecast_mist">Mgła</string>
@@ -83,7 +93,7 @@ Naprawdę to doceniam!"</string>
     <string name="forecast_rain">Deszcz</string>
     <string name="forecast_rain_and_snow">Deszcz ze śniegiem</string>
     <string name="forecast_rain_showers">Opady deszczu</string>
-	<string name="forecast_sand">Piasek</string>
+    <string name="forecast_sand">Piasek</string>
     <string name="forecast_scattered_showers">Przelotne opady</string>
     <string name="forecast_scattered_thunderstorms">Możliwe burze</string>
     <string name="forecast_showers">Opady</string>
@@ -91,9 +101,11 @@ Naprawdę to doceniam!"</string>
     <string name="forecast_smoke">Zadymienie</string>
     <string name="forecast_snow">Śnieg</string>
     <string name="forecast_snow_showers">Opady śniegu</string>
-	<string name="forecast_snow_storm">Burza śniegu</string>
+    <string name="forecast_snow_storm">Burza śniegu</string>
     <string name="forecast_sunny">Słonecznie</string>
     <string name="forecast_thunderstorm">Burza</string>
+    <string name="forecast_thunderstorms">Burze z piorunami</string>
+    <string name="forecast_tornado">Tornado</string>
     <string name="forecast_windy">Burza</string>    
     <string name="changelog">Zmiany</string>    
     <string name="just_now">Teraz</string>
@@ -126,6 +138,9 @@ Naprawdę to doceniam!"</string>
     <string name="moon_illuminated">Oświetlony</string>
     <string name="moon_since">Od</string>
     <string name="network_error">Połączenie z serwerem chwilowo niedostępne</string>
+    <string name="network_in_quiet_hours">Podczas Cichych godzin aktualizacje są wstrzymane.</string>
+    <string name="network_in_roaming">Aktualizacje niemożliwe podczas roamingu.</string>
+    <string name="network_wifi_only">Aktualizacje tylko przy Wi-Fi</string>
     <string name="new_version">Nowa wersja</string>
     <string name="no_provider">"Geolokalizacja nieudana
 Wybierz lokalizację ręcznie"</string>
@@ -160,6 +175,8 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_click_actions">Akcje kliknięcia</string>
     <string name="settings_check_updates_summary">Sprawdź aktualizacje aplikacji przy uruchamianiu</string>
     <string name="settings_check_updates_title">Sprawdjzaj aktualizacje</string>
+    <string name="settings_colorize_weather_icons_title">Kolorowane ikony</string>
+    <string name="settings_colorize_weather_icons_summary">Ustawia kolor ikon wg. koloru tekstu napisów</string>
     <string name="settings_miui_support_summary">Włącz wsparcie dla natywnych widżetów MIUI</string>
     <string name="settings_miui_support_title">Widżety MIUI</string>
     <string name="settings_miui_v5_summary">Kompatybilność z systemem MIUI v5</string>
@@ -188,6 +205,10 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_widgets_click_date_title">Dotknięcie daty</string>
     <string name="settings_widgets_click_weather_summary">Wybierz aplikację do uruchomienia po dotknięciu prognozy pogody (temperatury)</string>
     <string name="settings_widgets_click_weather_title">Dotknięcie prognozy</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Usuń zero wiodące</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Usuwa zera w tekście godziny</string>
+    <string name="settings_widgets_local_time_title">Czas lokalny</string>
+    <string name="settings_widgets_local_time_summary">Użyj czasu lokalnego miasta na widżecie</string>
     <string name="settings_widgets_widget4x1">Widżet 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Rozszerzona pogoda</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Odznacz dla domyślnego tła</string>
@@ -211,6 +232,8 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_widgets_widget4x2_v5">Widżet 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Domyślnie 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Wiatr</string>
+    <string name="settings_widgets_widget4x3">Widget 4x3</string>
+    <string name="settings_widgets_widget4x3_hourly_view">Pokaż godzinową pogodęr</string>
     <string name="share">Udostępnij</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Dziś: %1$s jest %2$s, %3$s, %4$s. Aktualizacja: %5$s."</string>
@@ -246,6 +269,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="weather_sunset">"Zachód: "</string>
     <string name="weather_visibility">"Widoczność: "</string>
     <string name="weather_wind">"Wiatr: "</string>
+    <string name="widget_name_4x3">(4x3) Pogoda BZ</string>
     <string name="widget_name_4x2">(4x2) Pogoda BZ</string>
     <string name="widget_name_4x2_v5">(4x2 v5) Pogoda BZ</string>
     <string name="widget_name_4x1">(4x1) Pogoda BZ</string>
